# game-gallery

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
header/: collection.hpp  fileManip.hpp  gamegallery.hpp  search.hpp  search_genre.hpp  search_name.hpp  search_pub.hpp  search_year.hpp  sort_genre.hpp  sort_name.hpp  sort_pub.hpp  sort_year.hpp  sorter.hpp  videogame.hpp
src/: JSONmain.cpp  collection.cpp  filemanip.cpp  gamegallery.cpp  main.cpp  videogame.cpp
tests/: .fileManipTests.hpp.swp  collectiontests.hpp  fileManipTests.hpp  jsontest.cpp  searchtest.hpp  searchtests.hpp  sortertests.hpp  test.cpp  videogametests.hpp
